fix: Update z-Index and only render picker if shown

--- a/app/editor-components/editor-component-styler/editor_component_styler.css
+++ b/app/editor-components/editor-component-styler/editor_component_styler.css
@@ -2,6 +2,6 @@
 	position: fixed;
 	top: 100px;
 	left: 20px;
-	z-index: 2000;
+	z-index: 1050;
 	background-color: silver;
 }
